# chinese-ocaml

./: .ci_status_check.md  .github_issue_body.md  .gitignore  .ocamlformat  AGENTS.md  AI_AGENT.md  AI友好语法工作示例.ly  AI友好语法示例.ly  CI_SUCCESS_SUMMARY.md  CI间歇性测试失败分析文档.md  CLAUDE.md  CONTRIBUTING.md  Chinese_OCaml_Project_Analysis.md  GITHUB_AUTHENTICATION.md  LICENSE  Makefile  PROJECT_SUMMARY.md  Printf_sprintf重复使用模式分析报告_2025-07-22.md  README.en.md  README.md  STRUCTURE.md  TEST_SUMMARY.md  add_bisect_config.py  add_pr_comment.py  analyze_code_duplication.py  analyze_code_quality.py  analyze_functions.py  analyze_long_functions.py  analyze_long_functions_comprehensive.py  analyze_long_functions_detailed.py  analyze_remaining_long_functions.py  analyze_technical_debt.py  analyze_test  ascii_check_results.txt  ast_based_analysis_results.json  bootstrap_compiler  bootstrap_v2  builtin_refactor_suggestions.ml  bulk_replace.py  check_ci.py  (+318 more)
debug/: debug_arrays.ml  debug_detailed_failure.ml  debug_exact_failure.ml  debug_function_arg.ml  debug_lexer.ml  debug_nested_array.ml  debug_parser_test.ml  debug_quchukongbai.ml  debug_quchukongbai2.ml  debug_tokens.ml  debug_utf8_test.ml  debug_variable_parsing.ml  debug_variable_reference.ml  debug_wenyan.ml  dune  pattern_match_debug.ml  test_debug.ml
src/: Lexer_chars.mli  Lexer_keywords.ml  Lexer_keywords.mli  Lexer_parsers.ml  Lexer_parsers.mli  Parser_ancient.ml  Parser_ancient.mli  Parser_expressions.ml  Parser_expressions.ml.backup  Parser_expressions.mli  Parser_expressions_advanced.ml  Parser_expressions_advanced.mli  Parser_expressions_arithmetic.ml  Parser_expressions_arithmetic.mli  Parser_expressions_assignment.ml  Parser_expressions_assignment.mli  Parser_expressions_binary.ml  Parser_expressions_binary.mli  Parser_expressions_logical.ml  Parser_expressions_logical.mli  Parser_expressions_main.ml  Parser_expressions_main.mli  Parser_expressions_natural_language.ml  Parser_expressions_natural_language.mli  Parser_expressions_primary.ml  Parser_expressions_primary.mli  Parser_expressions_utils.ml  Parser_expressions_utils.mli  Parser_patterns.ml  Parser_patterns.ml.bak  Parser_patterns.mli  Parser_poetry.ml  Parser_poetry.mli  Parser_statements.ml  Parser_statements.ml.bak  Parser_statements.mli  Parser_types.ml  Parser_types.mli  Parser_utils.ml  Parser_utils.ml.bak  (+543 more)
src/ai/: ai_code_generator.ml  ai_code_generator.mli  code_completion.ml  code_completion.mli  declarative_transformer.ml  declarative_transformer.mli  dune  intelligent_doc_generator.ml  intelligent_doc_generator.mli  intent_parser.ml  intent_parser.mli  natural_language.ml  natural_language.mli  pattern_learning_system.ml  pattern_learning_system.mli  pattern_matching.ml  pattern_matching.mli
src/config/: compiler_config.ml  compiler_config.mli  config_loader.ml  config_loader.mli  dune  env_var_config.ml  env_var_config.mli  env_var_config_backup.ml  runtime_config.ml  runtime_config.mli  unified_config.ml  unified_config.mli
src/constants/: buffer_constants.ml  buffer_constants.mli  color_constants.ml  color_constants.mli  compiler_constants.ml  compiler_constants.mli  core_constants.ml  core_constants.mli  dune  error_constants.ml  error_constants.mli  message_constants.ml  message_constants.mli  metrics_constants.ml  metrics_constants.mli  number_constants.ml  number_constants.mli  runtime_constants.ml  runtime_constants.mli  system_constants.ml  system_constants.mli  test_constants.ml  test_constants.mli
src/logging/: dune  log_core.ml  log_core.mli  log_legacy.ml  log_legacy.mli  log_messages.ml  log_messages.mli  log_output.ml  log_output.mli  unified_logging_compat.ml  unified_logging_compat.mli
src/parser/: Parser_patterns.ml  Parser_patterns.mli  Parser_types.ml  Parser_types.mli  Parser_utils.ml  Parser_utils.mli  dune
src/parser_expressions/: README.md
src/performance/: benchmark_config.ml  benchmark_config.mli  benchmark_coordinator.ml  benchmark_coordinator.mli  benchmark_core.ml  benchmark_core.mli  benchmark_lexer.ml  benchmark_lexer.mli  benchmark_memory.ml  benchmark_memory.mli  benchmark_parser.ml  benchmark_parser.mli  benchmark_poetry.ml  benchmark_poetry.mli  benchmark_regression.ml  benchmark_regression.mli  benchmark_reporter.ml  benchmark_reporter.mli  benchmark_timer.ml  benchmark_timer.mli  dune
src/poetry/: artistic_advanced_analysis.ml  artistic_advanced_analysis.mli  artistic_core_evaluators.ml  artistic_core_evaluators.mli  artistic_data_loader.ml  artistic_data_loader.mli  artistic_evaluation.ml  artistic_evaluation.mli  artistic_evaluator.ml  artistic_evaluator.mli  artistic_evaluator_backup.ml  artistic_evaluator_comprehensive.ml  artistic_evaluator_comprehensive.mli  artistic_evaluator_content.ml  artistic_evaluator_content.mli  artistic_evaluator_context.ml  artistic_evaluator_context.mli  artistic_evaluator_form.ml  artistic_evaluator_form.mli  artistic_evaluator_sound.ml  artistic_evaluator_sound.mli  artistic_evaluator_types.ml  artistic_evaluator_types.mli  artistic_evaluators.ml  artistic_evaluators.mli  artistic_form_evaluators.ml  artistic_form_evaluators.mli  artistic_guidance.ml  artistic_guidance.mli  artistic_soul_evaluation.ml  artistic_types.ml  (+116 more)
test/: README.md  ancient_pattern_quoted_identifier.ml  arrays.ml  ascii_rejection.ml  ascii_rejection.ml.backup  builtin_function_helpers_test.ml  c_backend.ml  cases.ml  chinese_best_practices.ml  chinese_comments.ml  chinese_expressions.ml  chinese_expressions.ml.bak  chinese_punctuation.ml  code_completion.ml  config.ml  debug.ml  debug_ancient_pattern.ml  debug_array_access.ml  debug_array_parsing.ml  debug_ast.ml  debug_boundary.ml  debug_chinese_check.ml  debug_chinese_comments.ml  debug_constructor_issue.ml  debug_copy_array.ml  debug_create5.ml  debug_createarray.ml  debug_detailed.ml  debug_detailed_issue.ml  debug_keyword.ml  debug_keyword_match.ml  debug_keywordmatch.ml  debug_lexer_test.ml.bak  debug_mixed.ml  debug_natural_function.ml  debug_nlf_tokens.ml  debug_number_recognition.ml  debug_pattern_match.ml  debug_she_tokens.ml  debug_simple_parsing.ml  (+348 more)
(+3474 files in other folders)
