(executable
 (public_name test_rhyme_modularization)
 (name test_rhyme_modularization)
 (libraries rhyme_groups))


(executable
 (public_name debug_json_parsing)
 (name debug_json_parsing)
 (modules debug_json_parsing)
 (libraries str))

(executable
 (public_name test_rhyme_functionality)
 (name test_rhyme_functionality)
 (libraries poetry))
