;; 已尝试全局配置但dune env不支持preprocess字段

(executable
 (public_name test_rhyme_core)
 (name test_rhyme_core)
 (libraries poetry_core))

(executable
 (public_name run_token_benchmark)
 (name run_token_benchmark)
 (libraries yyocamlc.lib))

(rule
 (alias runtest)
 (deps test/run_tests.sh)
 (action
  (chdir
   %{project_root}
   (setenv
    INSIDE_DUNE
    1
    (run bash test/run_tests.sh)))))
