(executable
 (public_name debug_lexer)
 (name debug_lexer)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_nested_array)
 (name debug_nested_array)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_wenyan)
 (name debug_wenyan)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_quchukongbai)
 (name debug_quchukongbai)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_quchukongbai2)
 (name debug_quchukongbai2)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_variable_parsing)
 (name debug_variable_parsing)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_exact_failure)
 (name debug_exact_failure)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_detailed_failure)
 (name debug_detailed_failure)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_variable_reference)
 (name debug_variable_reference)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_function_arg)
 (name debug_function_arg)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_arrays)
 (name debug_arrays)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_utf8_test)
 (name debug_utf8_test)
 (libraries yyocamlc_lib))

(executable
 (public_name pattern_match_debug)
 (name pattern_match_debug)
 (libraries yyocamlc_lib))

(executable
 (public_name debug_parser_test)
 (name debug_parser_test)
 (libraries yyocamlc_lib))
