(executables
 (public_names yyocamlc)
 (names main)
 (modules main)
 (libraries yyocamlc_lib))

(library
 (public_name yyocamlc.lib)
 (name yyocamlc_lib)
 (modules
  config
  constants
  error_handler
  error_utils
  keyword_tables
  token_types
  utf8_utils
  string_processing_utils
  string_formatter
  keyword_matcher
  lexer_tokens
  lexer_state
  lexer_utils
  lexer_variants
  lexer_keywords
  lexer_chars
  lexer_parsers
  ast
  lexer
  parser
  types
  core_types
  types_errors
  types_cache
  types_builtin
  types_unify
  types_subst
  types_convert
  types_infer
  semantic_context
  semantic_builtins
  semantic_types
  semantic_expressions
  semantic_statements
  semantic_errors
  semantic
  error_recovery
  value_operations
  builtin_error
  builtin_io
  builtin_math
  builtin_string
  builtin_collections
  builtin_array
  builtin_types
  builtin_utils
  builtin_constants
  builtin_functions
  interpreter_state
  interpreter_utils
  binary_operations
  pattern_matcher
  function_caller
  unified_errors
  expression_evaluator_basic
  expression_evaluator_control
  expression_evaluator_data
  expression_evaluator
  statement_executor
  interpreter
  codegen
  c_codegen_context
  c_codegen_literals
  c_codegen_operations
  c_codegen_collections
  c_codegen_structured
  c_codegen_control
  c_codegen_patterns
  c_codegen_exceptions
  c_codegen_expressions
  c_codegen_statements
  c_codegen
  compiler
  error_messages
  nlf_semantic
  chinese_best_practices
  refactoring_analyzer
  logger
  logger_utils
  compiler_errors
  parser_utils
  parser_types
  parser_patterns
  parser_ancient
  parser_poetry
  parser_expressions
  parser_statements
  parser_expressions_utils
  parser_expressions_binary
  parser_expressions_primary
  parser_expressions_assignment
  parser_expressions_logical
  parser_expressions_arithmetic
  parser_expressions_natural_language
  parser_expressions_conditional
  parser_expressions_match
  parser_expressions_function
  parser_expressions_record
  parser_expressions_exception
  parser_expressions_postfix
  parser_expressions_arrays
  parser_expressions_advanced
  parser_expressions_main
  parser_expressions_core
  parser_natural_functions
  lexer_token_conversion_literals
  lexer_token_conversion_identifiers
  lexer_token_conversion_basic_keywords
  lexer_token_conversion_type_keywords
  lexer_token_conversion_classical
  lexer_token_converter)
 (libraries uutf str unix lexer_data token_mapping)
 (flags
  (:standard -warn-error -32-33))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))
