(executables
 (public_names yyocamlc)
 (names main)
 (modules main)
 (libraries yyocamlc_lib))

(library
 (public_name yyocamlc.lib)
 (name yyocamlc_lib)
 (modules
  data_loader
  config
  constants
  unicode_constants
  error_handler
  error_utils
  keyword_tables
  token_types
  unified_token_core
  unified_token_registry
  token_compatibility_keywords
  token_compatibility_operators
  token_compatibility_delimiters
  token_compatibility_literals
  token_compatibility_core
  token_compatibility_reports
  token_compatibility
  utf8_utils
  string_processing_utils
  string_formatter
  unified_formatter
  unified_logger
  unified_logging
  logging_migration
  keyword_matcher
  lexer_tokens
  lexer_state
  lexer_utils
  lexer_variants
  lexer_keywords
  lexer_chars
  lexer_parsers
  ast
  lexer
  parser
  types
  core_types
  types_errors
  types_cache
  types_builtin
  types_unify
  types_subst
  types_convert
  types_infer
  semantic_context
  semantic_builtins
  semantic_types
  semantic_expressions
  semantic_statements
  semantic_errors
  semantic
  error_recovery
  value_operations
  param_validator
  numeric_ops
  builtin_error
  builtin_shared_utils
  builtin_io
  builtin_math
  builtin_string
  builtin_collections
  builtin_array
  builtin_types
  builtin_utils
  builtin_constants
  builtin_functions
  interpreter_state
  interpreter_utils
  binary_operations
  pattern_matcher
  function_caller
  unified_errors
  expression_evaluator_basic
  expression_evaluator_control
  expression_evaluator_data
  expression_evaluator
  statement_executor
  interpreter
  codegen
  c_codegen_context
  c_codegen_literals
  c_codegen_operations
  c_codegen_collections
  c_codegen_structured
  c_codegen_control
  c_codegen_patterns
  c_codegen_exceptions
  c_codegen_expressions
  c_codegen_statements
  c_codegen
  compiler_config
  compiler
  compiler_phases
  error_messages
  nlf_semantic
  chinese_best_practices
  refactoring_analyzer_types
  refactoring_analyzer_naming
  refactoring_analyzer_complexity
  refactoring_analyzer_duplication
  refactoring_analyzer_performance
  refactoring_analyzer_core
  refactoring_analyzer
  logger
  logger_utils
  compiler_errors_types
  compiler_errors_creation
  compiler_errors_formatter
  compiler_errors
  parser_utils
  parser_types
  parser_patterns
  parser_ancient
  parser_poetry
  parser_expressions
  parser_expressions_token_reducer
  parser_expressions_type_keywords
  parser_statements
  parser_expressions_utils
  parser_expressions_binary
  parser_expressions_primary
  parser_expressions_identifiers
  parser_expressions_keywords_primary
  parser_expressions_compound_primary
  parser_expressions_literals_primary
  parser_expressions_poetry_primary
  parser_expressions_assignment
  parser_expressions_logical
  parser_expressions_arithmetic
  parser_expressions_natural_language
  parser_expressions_conditional
  parser_expressions_match
  parser_expressions_function
  parser_expressions_record
  parser_expressions_exception
  parser_expressions_postfix
  parser_expressions_calls
  parser_expressions_arrays
  parser_expressions_advanced
  parser_expressions_main
  parser_expressions_core
  parser_natural_functions
  lexer_token_conversion_literals
  lexer_token_conversion_identifiers
  lexer_token_conversion_basic_keywords
  lexer_token_conversion_type_keywords
  lexer_token_conversion_classical
  lexer_token_converter)
 (libraries
  uutf
  str
  unix
  unicode
  config_modules
  lexer_data
  token_mapping
  chinese_best_practices_types
  chinese_best_practices_rules
  chinese_best_practices_checkers
  chinese_best_practices_reporters
  chinese_best_practices_core
  luoyan_logging)
 (flags
  (:standard -warn-error -32-33))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))
