;; 骆言编译器测试系统 - 测试目录重构配置
;; 综合两个分支的测试配置，保留必要的功能测试

;; 测试辅助库

(library
 (name test_utils)
 (modules helper)
 (libraries yyocamlc_lib alcotest))

;; 核心编译器模块单元测试已移动至 test/unit/ 目录

;; 核心功能测试

(test
 (name arrays)
 (modules arrays)
 (libraries yyocamlc_lib alcotest))

(test
 (name config)
 (modules config)
 (libraries yyocamlc_lib))

;; 词法分析测试

(test
 (name fullwidth)
 (modules fullwidth)
 (libraries yyocamlc_lib alcotest))

;; 新增模块化词法分析器测试

(test
 (name test_lexer_refactored_modules)
 (modules test_lexer_refactored_modules)
 (libraries yyocamlc_lib alcotest unix))

(test
 (name chinese_punctuation)
 (modules chinese_punctuation)
 (libraries yyocamlc_lib))

(test
 (name chinese_comments)
 (modules chinese_comments)
 (libraries yyocamlc_lib))

(test
 (name char_analysis)
 (modules char_analysis)
 (libraries yyocamlc_lib))

(test
 (name keyword_matching)
 (modules keyword_matching)
 (libraries yyocamlc_lib))

;; 语法分析测试

(test
 (name wenyan_syntax)
 (modules wenyan_syntax)
 (libraries yyocamlc_lib alcotest))

(test
 (name wenyan_declaration)
 (modules wenyan_declaration)
 (libraries yyocamlc_lib alcotest))

(test
 (name chinese_expressions)
 (modules chinese_expressions)
 (libraries yyocamlc_lib))

;; 语义分析测试

(test
 (name debug)
 (modules debug)
 (libraries yyocamlc_lib alcotest))

(test
 (name lexer)
 (modules lexer)
 (libraries yyocamlc_lib alcotest))

(test
 (name types)
 (modules types)
 (libraries yyocamlc_lib alcotest))

(test
 (name chinese_best_practices)
 (modules chinese_best_practices)
 (libraries yyocamlc_lib))

(test
 (name refactoring_analyzer)
 (modules refactoring_analyzer)
 (libraries yyocamlc_lib))

;; 错误处理测试

(test
 (name cases)
 (modules cases)
 (libraries yyocamlc_lib alcotest))

(test
 (name ascii_rejection)
 (modules ascii_rejection)
 (libraries yyocamlc_lib alcotest str))

; disabled - blocked by Issue #105 and #67: 
; Records need { } syntax but ASCII symbols banned. 
; Ancient style (古雅体) syntax planned but not yet implemented per maintainer decision.
; (test
;  (name records)
;  (modules records)
;  (libraries yyocamlc_lib alcotest))

; arrays test already enabled above at line 11-14

(test
 (name type_definitions)
 (modules type_definitions)
 (libraries yyocamlc_lib alcotest))

; re-enabled - complies with issue #105 symbol restrictions (only uses supported symbols)

(test
 (name natural_functions)
 (modules natural_functions)
 (libraries yyocamlc_lib alcotest))

;; 其他单元测试

(test
 (name step_by_step)
 (modules step_by_step)
 (libraries yyocamlc_lib alcotest))

(test
 (name yyocamlc)
 (modules yyocamlc)
 (libraries yyocamlc_lib alcotest))

;; Issue #107 类型系统功能测试

(test
 (name test_keyword_conflict_fix)
 (modules test_keyword_conflict_fix)
 (libraries yyocamlc_lib alcotest))

(test
 (name test_issue_105_symbols)
 (modules test_issue_105_symbols)
 (libraries yyocamlc_lib str))

;; 可执行工具和调试工具
;; Note: debug_simple_tokens.ml and debug_simple_parsing.ml were removed in restructuring

;; debug_ast.ml 已移动到 test/debug/ 目录中

;; Issue #107 类型系统可执行测试工具

(executable
 (name test_type_annotations)
 (modules test_type_annotations)
 (libraries yyocamlc_lib))

(executable
 (name test_private_types)
 (modules test_private_types)
 (libraries yyocamlc_lib))

(executable
 (name test_polymorphic_variants)
 (modules test_polymorphic_variants)
 (libraries yyocamlc_lib))

(executable
 (name test_minimal)
 (modules test_minimal)
 (libraries yyocamlc_lib))

;; 古典诗词解析器测试

(executable
 (name test_poetry_parser)
 (modules test_poetry_parser)
 (libraries yyocamlc_lib))

;; 模块化词法分析器测试

(executable
 (name test_modular_lexer)
 (modules test_modular_lexer)
 (libraries yyocamlc_lib))

;; 集成测试
;; 暂时禁用原版集成测试，因为capture_output函数导致CI超时
;; 使用简化版集成测试代替

; (test
;  (name integration)
;  (modules integration)
;  (libraries yyocamlc_lib alcotest))

;; 诗词编程特性测试 (Poetry programming features tests)

(test
 (name test_poetry_rhyme_analysis_simple)
 (modules test_poetry_rhyme_analysis_simple)
 (libraries poetry alcotest))

(test
 (name test_poetry_tone_pattern)
 (modules test_poetry_tone_pattern)
 (libraries poetry alcotest))

(test
 (name test_artistic_evaluation)
 (modules test_artistic_evaluation)
 (libraries poetry alcotest))

(test
 (name test_parallelism_analysis)
 (modules test_parallelism_analysis)
 (libraries poetry alcotest))

;; 古典诗词特征测试 (Classical poetry features tests)

(test
 (name test_classical_poetry_features)
 (modules test_classical_poetry_features)
 (libraries yyocamlc_lib alcotest))

;; 诗词编程艺术性测试 (Artistic programming tests for AI training)

(test
 (name test_artistic_programming)
 (modules test_artistic_programming)
 (libraries alcotest))

;; 诗词艺术性增强测试 (Artistic enhancement tests for Issue #108)

(test
 (name test_artistic_enhancement)
 (modules test_artistic_enhancement)
 (libraries yyocamlc_lib poetry alcotest))

;; 统一诗词数据加载器测试 (Poetry data loader tests for Phase 15)

(executable
 (name test_poetry_data_loader)
 (modules test_poetry_data_loader)
 (libraries poetry_data))

;; 统一Token映射器测试 (Unified token mapper tests for Phase 15.2)
; 注释：Token映射系统已重构，相关模块已移除，暂时禁用此测试

; (executable
;  (name test_simple_token_mapper)
;  (modules test_simple_token_mapper)
;  (libraries yyocamlc_lib))

;; 内置函数重构测试 (Builtin function refactoring tests for Phase 15.3)

(executable
 (name test_builtin_shared_utils)
 (modules test_builtin_shared_utils)
 (libraries yyocamlc_lib))

;; C代码生成控制模块错误处理测试 (C codegen control error handling tests for Issue #554)

(executable
 (name test_c_codegen_control_error_handling)
 (modules test_c_codegen_control_error_handling)
 (libraries yyocamlc_lib))

;; Token重复消除演示测试 (Token deduplication demo for Issue #563)

(executable
 (name test_token_reducer_demo)
 (modules test_token_reducer_demo)
 (libraries yyocamlc_lib))

;; 数据加载器综合测试 (Data loader comprehensive test for Fix #593)

(executable
 (name test_data_loader)
 (modules test_data_loader)
 (libraries yyocamlc_lib unix))

;; UTF-8字符处理工具综合测试 (UTF8 utils comprehensive test for Fix #593)

(executable
 (name test_utf8_utils)
 (modules test_utf8_utils)
 (libraries yyocamlc_lib unix))

;; 值操作模块综合测试 (Value operations comprehensive test for Fix #593)

(executable
 (name test_value_operations)
 (modules test_value_operations)
 (libraries yyocamlc_lib unix))

;; 数值操作模块综合测试 (Numeric operations comprehensive test for Fix #593)

(executable
 (name test_numeric_ops)
 (modules test_numeric_ops)
 (libraries yyocamlc_lib unix))

;; 参数验证DSL模块综合测试 (Parameter validator comprehensive test for Fix #593)

(executable
 (name test_param_validator)
 (modules test_param_validator)
 (libraries yyocamlc_lib unix))

;; Phase 25 核心模块测试覆盖率提升测试 (Core module test coverage enhancement for Issue #678)

(test
 (name test_core_coverage_enhanced)
 (modules test_core_coverage_enhanced)
 (libraries yyocamlc_lib alcotest))

;; Phase 26 内置模块测试覆盖率提升测试 (Built-in modules test coverage enhancement for Issue #680)

(test
 (name test_builtin_array)
 (modules test_builtin_array)
 (libraries yyocamlc_lib alcotest))

(test
 (name test_builtin_math)
 (modules test_builtin_math)
 (libraries yyocamlc_lib alcotest))

(test
 (name test_builtin_string)
 (modules test_builtin_string)
 (libraries yyocamlc_lib alcotest str))

;; Phase 28 核心模块测试覆盖率大幅提升测试 (Core modules test coverage enhancement for Issue #684)

(test
 (name test_parser_core_functionality)
 (modules test_parser_core_functionality)
 (libraries yyocamlc_lib alcotest))

(test
 (name test_types_core_operations)
 (modules test_types_core_operations)
 (libraries yyocamlc_lib alcotest))

;; Fix #732 测试覆盖率提升和质量保障系统完善 - 第一阶段核心模块测试增强

(test
 (name test_parser_comprehensive_simple)
 (modules test_parser_comprehensive_simple)
 (libraries yyocamlc_lib alcotest))

;; 暂时注释掉直到修复编译问题
;; (test
;;  (name test_semantic_comprehensive)
;;  (modules test_semantic_comprehensive)
;;  (libraries yyocamlc_lib alcotest))
;;
;; (test
;;  (name test_error_handling_comprehensive)
;;  (modules test_error_handling_comprehensive)
;;  (libraries yyocamlc_lib alcotest))
;;
;; (test
;;  (name test_poetry_comprehensive)
;;  (modules test_poetry_comprehensive)
;;  (libraries yyocamlc_lib alcotest))

;; Fix #749 测试覆盖率改进：提升测试覆盖率从28.8%到50%以上

(test
 (name test_config_comprehensive)
 (modules test_config_comprehensive)
 (libraries yyocamlc_lib config_modules alcotest unix))

(test
 (name test_unicode_simple)
 (modules test_unicode_simple)
 (libraries yyocamlc_lib unicode alcotest str))

(test
 (name test_logging_comprehensive)
 (modules test_logging_comprehensive)
 (libraries yyocamlc_lib luoyan_logging alcotest unix))

(test
 (name test_unicode_comprehensive)
 (modules test_unicode_comprehensive)
 (libraries yyocamlc_lib unicode alcotest str))

(test
 (name test_c_codegen_comprehensive)
 (modules test_c_codegen_comprehensive)
 (libraries yyocamlc_lib alcotest str))

;; 新增核心模块基础测试以提升测试覆盖率至50%+

(test
 (name test_core_modules_basic)
 (modules test_core_modules_basic)
 (libraries yyocamlc_lib config_modules luoyan_logging unicode alcotest))

;; 新增核心解释器基础测试以大幅提升测试覆盖率至50%+ - Fix #749

(test
 (name test_interpreter_core_basic)
 (modules test_interpreter_core_basic)
 (libraries yyocamlc_lib alcotest))

;; Fix #822 类型系统核心模块综合测试覆盖率改进 - 为类型系统核心模块添加综合测试

(test
 (name test_types_infer_comprehensive)
 (modules test_types_infer_comprehensive)
 (libraries yyocamlc_lib alcotest))

;; Fix #824 类型推断和统一算法测试覆盖率专项改进 - 二期

(test
 (name test_types_infer_algorithms)
 (modules test_types_infer_algorithms)
 (libraries yyocamlc_lib alcotest))

(test
 (name test_types_unify_algorithms)
 (modules test_types_unify_algorithms)
 (libraries yyocamlc_lib alcotest))

;; CI超时问题排查测试

(executable
 (name minimal_factorial)
 (modules minimal_factorial)
 (libraries yyocamlc_lib))

(test
 (name simple_integration)
 (modules simple_integration)
 (libraries yyocamlc_lib alcotest))

;; Fix #895 测试覆盖率改进：词法分析和核心模块测试增强 - 词法分析器增强测试覆盖

(test
 (name test_lexer_enhanced_coverage)
 (modules test_lexer_enhanced_coverage)
 (libraries yyocamlc_lib alcotest))

;; Fix #897 技术债务改进：性能基准测试系统建立 - 编译器性能监控和回归检测

(test
 (name test_performance_benchmark)
 (modules test_performance_benchmark)
 (libraries yyocamlc_lib unix))

(executable
 (name performance_benchmark_runner)
 (modules performance_benchmark_runner)
 (libraries yyocamlc_lib unix))
